--- a/Reading_Stringer_database_general.ipynb
+++ b/Reading_Stringer_database_general.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
     "        index_group.append(np.array([x for x,j in enumerate((z_depth>=g[0])*(z_depth<=g[1])) if j>0]))\n",
     "        neurons_per_layer.append(len(index_group[-1]))\n",
     "        \n",
-    "    minimal_neuron_count = int(min(neurons_per_layer)*1)\n",
+    "    minimal_neuron_count = int(min(neurons_per_layer)*0.9)\n",
     "    \n",
     "    for layer in range(len(groups)):\n",
     "#         trained_models.append([])\n",
@@ -409,7 +409,7 @@
     "#        trained_models[layer].append(tm)\n",
     "#        predictions[layer].append(pdct)\n",
     "\n",
-    "        print(layer)\n",
+    "        #print(layer)\n",
     "\n",
     "    return minimal_neuron_count, MSE, R2, predictions"
    ]
@@ -546,79 +546,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "1 0\n",
-      "1 1\n",
-      "1 2\n",
-      "1 3\n",
-      "1 4\n",
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "1 0\n",
-      "1 1\n",
-      "1 2\n",
-      "1 3\n",
-      "1 4\n",
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "1 0\n",
-      "1 1\n",
-      "1 2\n",
-      "1 3\n",
-      "1 4\n",
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "1 0\n",
-      "1 1\n",
-      "1 2\n",
-      "1 3\n",
-      "1 4\n",
-      "0 0\n",
-      "0 1\n",
-      "0 2\n",
-      "0 3\n",
-      "0 4\n",
-      "0\n"
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "4\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "5\n",
+      "0\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "for MOUSE_IND in [0]:#[0,1,3,4,5,6,7,8]:\n",
+    "for MOUSE_IND in [1,3,4,5,6,7,8]:\n",
     "    mouse_decoding = {}\n",
     "    \n",
     "    rat = mice_files[MOUSE_IND]\n",
